--- a/src/workflows/example_workflow.yml
+++ b/src/workflows/example_workflow.yml
@@ -1,6 +1,10 @@
 name: "example_workflow"
 steps:
-  - taskType: "analysis"
+  - taskType: "polygonArea"
     stepNumber: 1
-  - taskType: "notification"
+  - taskType: "analysis"
     stepNumber: 2
+    dependsOn: 1     
+  - taskType: "notification"
+    stepNumber: 3
+    dependsOn: 2
